fixed all buttons! add notes & make subpages pretty!!

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@ color: white;
 
 
 <div class="dropdown">
-<button onclick="myFunction()" class="dropbtn">News</button>
+<button> <a href="aboutme.html" class="button button1" onmouseover="myFunction()" class="dropbtn">News</a></button>
+ <div>
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
     <a href="recentnews.html">Most Recent</a>
@@ -91,12 +92,11 @@ color: white;
     <a href="blog.html">Blog</a>
   </div>
 </div>
-
+    </div>
 
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
 
-<button class="button button4">Contact</button>
-
+    <button> <a href="contactme.html"  class="button button4">Contact</a></button>
 
 
 <!-- This is the pics for my slideshow-->
@@ -172,3 +172,8 @@ function filterFunction() {
     }
 }
 </script>
+
+
+    </head>
+
+</html>
