added buttons and colors

--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,96 @@
-blog
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My Blog</title>
+    <link rel="stylesheet" href="index.css" type="text/css">
+    </head>
+
+<style>
+.mySlides {display:none;}
+</style>
+
+<head>
+    <title>My Page</title>
+    <link rel="stylesheet" href="index.css">
+    <head>
+<style>
+
+
+    .button {
+    background-color: DAE1F1;
+    border: none;
+    color: black;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button1 {
+    background-color: #DAE1F1;
+    color: black;
+}
+
+.button1:hover {
+    background-color: #DAE1F1;
+    color: white;
+}
+
+.button2 {
+    background-color: #DAE1F1;
+    color: black;
+}
+
+.button2:hover {
+    background-color: #DAE1F1;
+    color: white;
+}
+
+.button3 {
+    background-color: #DAE1F1;
+    color: black;
+}
+
+.button3:hover {
+    background-color: #DAE1F1;
+    color: white;
+}
+
+.button4 {
+    background-color: #DAE1F1;
+    color: black;
+}
+
+.button4:hover {background-color: #DAE1F1;
+color: white;
+}
+
+}
+</style>
+</head>
+
+
+  <button> <a href="aboutme.html" class="button button1">About Me</a></button>
+
+
+<div class="dropdown">
+<button> <a href="aboutme.html" class="button button1" onmouseover="myFunction()" class="dropbtn">News</a></button>
+ <div>
+  <div id="myDropdown" class="dropdown-content">
+    <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+    <a href="recentnews.html">Most Recent</a>
+    <a href="archives.html">Archives</a>
+    <a href="blog.html">Blog</a>
+  </div>
+</div>
+    </div>
+
+    <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
+
+    <button> <a href="contactme.html"  class="button button4">Contact</a></button>
