--- a/index.html
+++ b/index.html
@@ -79,12 +79,15 @@ color: white;
 
 <!--This is how I do my header & buttons-->
 
+   <div class="allbuttons">
     <button> <a href="aboutme.html" class="button button1">About Me</a></button>
 
 
 <div class="dropdown">
 <button> <a href="aboutme.html" class="button button1" onmouseover="myFunction()" class="dropbtn">News</a></button>
  <div>
+
+
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
     <a href="recentnews.html">Most Recent</a>
@@ -94,10 +97,12 @@ color: white;
 </div>
     </div>
 
+
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
 
     <button> <a href="contactme.html"  class="button button4">Contact</a></button>
 
+</div>
 
 <!-- This is the pics for my slideshow-->
 
