--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
+     <link rel="stylesheet" href="index.css" type="text/css">
     <style>
 div.gallery {
     margin: 5px;
@@ -25,9 +26,100 @@ div.desc {
     text-align: center;
 }
 </style>
-</head>
+
+<style>
+.mySlides {display:none;}
+</style>
+
+<style>
+
+
+    .button {
+    background-color: DAE1F1;
+    border: none;
+    color: black;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button1 {
+    background-color: #DAE1F1;
+    color: black;
+}
+
+.button1:hover {
+    background-color: #DAE1F1;
+    color: white;
+}
+
+.button2 {
+    background-color: #DAE1F1;
+    color: black;
+}
+
+.button2:hover {
+    background-color: #DAE1F1;
+    color: white;
+}
+
+.button3 {
+    background-color: #DAE1F1;
+    color: black;
+}
+
+.button3:hover {
+    background-color: #DAE1F1;
+    color: white;
+}
+
+.button4 {
+    background-color: #DAE1F1;
+    color: black;
+}
+
+.button4:hover {background-color: #DAE1F1;
+color: white;
+}
+
+}
+</style>
+    </head>
+
+
 <body>
-    <div class="gallery">
+
+    <!--This is how I do my header & buttons-->
+
+    <button> <a href="aboutme.html" class="button button1">About Me</a></button>
+
+
+<div class="dropdown">
+<button> <a href="aboutme.html" class="button button1" onmouseover="myFunction()" class="dropbtn">News</a></button>
+ <div>
+  <div id="myDropdown" class="dropdown-content">
+    <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+    <a href="recentnews.html">Most Recent</a>
+    <a href="archives.html">Archives</a>
+    <a href="blog.html">Blog</a>
+  </div>
+</div>
+    </div>
+
+
+    <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
+
+    <button> <a href="contactme.html"  class="button button4">Contact</a></button>
+
+         <br>
+
+          <div class="gallery">
   <a target="_blank" href="graphicdesign/hidalgo.isabelle.javaswamp.jpg">
     <img src="graphicdesign/hidalgo.isabelle.javaswamp.jpg" alt="Java Swamp" width="600" height="400">
   </a>
@@ -70,4 +162,46 @@ div.desc {
 </div>
 
 </body>
+
+<script>
+var myIndex = 0;
+var myIndex1 = 0;
+
+    function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+
+
+    function myFunction1() {
+    document.getElementById("myDropdown2").classList.toggle("show");
+}
+
+function filterFunction() {
+    var input, filter, ul, li, a, i;
+    input = document.getElementById("myInput");
+    filter = input.value.toUpperCase();
+    div = document.getElementById("myDropdown");
+    a = div.getElementsByTagName("a");
+    for (i = 0; i < a.length; i++) {
+        if (a[i].innerHTML.toUpperCase().indexOf(filter) > -1) {
+            a[i].style.display = "";
+        } else {
+            a[i].style.display = "none";
+        }
+    }
+}
+
+    function filterFunction1() {
+    var  input, filter, ul, li, a, i;
+    div = document.getElementById("myDropdown2");
+    a = div.getElementsByTagName("b");
+    for (i = 0; i < a.length; i++) {
+        if (a[i].innerHTML.toUpperCase().indexOf(filter) > -1) {
+            a[i].style.display = "";
+        } else {
+            a[i].style.display = "none";
+        }
+    }
+}
+</script>
 </html>
