--- a/aboutme.html
+++ b/aboutme.html
@@ -107,4 +107,13 @@ color: white;
 
     <button> <a href="contactme.html"  class="button button4">Contact</a></button>
 
+<br>
 
+<img class="resume" src="resume.png" alt="resume"/>
+
+
+    </body>
+
+    </head>
+
+</html>
