--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ color: white;
 </div>
     </div>
 
+    <input img="" class="myButton" type="submit" value="">
 
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
 
@@ -107,15 +108,16 @@ color: white;
 <!-- This is the pics for my slideshow-->
 
 <div class="slideshow" style="max-width:800px">
-  <img class="mySlides" src="landscape_pics/C02p4VxXcAAqKA-.jpg" style="width:800px">
-  <img class="mySlides" src="landscape_pics/Cn2ffzWVMAAU4aF.jpg" style="width:800px">
-  <img class="mySlides" src="landscape_pics/CpRSR_HWEAAmZ3-.jpg" style="width:800px">
-  <img class="mySlides" src="landscape_pics/Cq1gO8xW8AId_Zq.jpg" style="width:800px">
-  <img class="mySlides" src="landscape_pics/CrerSRqUkAAavk4.jpg" style="width:800px">
-  <img class="mySlides" src="landscape_pics/CtJBmMsWIAAOBQs.jpg" style="width:800px">
-  <img class="mySlides" src="landscape_pics/Ccae4NxW0AACeW-.jpg" style="width:800px">
-  <img class="mySlides" src="landscape_pics/Cnc34H2UkAACONP.jpg" style="width:800px">
-  <img class="mySlides" src="landscape_pics/CnrvsrxVMAAem4o.jpg" style="width:800px">
+  <img class="mySlides" src="newlandscape/beachreddot.png" style="width:800px">
+  <img class="mySlides" src="newlandscape/beachwithdad.png" style="width:800px">
+  <img class="mySlides" src="newlandscape/dorneyxc.png" style="width:800px">
+  <img class="mySlides" src="newlandscape/laughingreddot.png" style="width:800px">
+  <img class="mySlides" src="newlandscape/poolparty.png" style="width:800px">
+  <img class="mySlides" src="newlandscape/abwconcert.png" style="width:800px">
+  <img class="mySlides" src="newlandscape/dorneystandup.png" style="width:800px">
+  <img class="mySlides" src="newlandscape/kayaking.png" style="width:800px">
+   <img class="mySlides" src="newlandscape/laughingreddot.png" style="width:800px">
+
 </div>
 
     </body>
