--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,13 @@
     <title>Portfolio</title>
      <link rel="stylesheet" href="index.css" type="text/css">
     <style>
+
+        body {
+
+            background-color: rgba(179, 219, 214, 0.76)
+        }
+
+
 div.gallery {
     margin: 5px;
     border: 4px solid #DAE1F1;
@@ -101,7 +108,7 @@ color: white;
 
 
 <div class="dropdown">
-<button> <a href="aboutme.html" class="button button1" onmouseover="myFunction()" class="dropbtn">News</a></button>
+<button> <a href="recentnews.html" class="button button1" onmouseover="myFunction()" class="dropbtn">News</a></button>
  <div>
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
@@ -112,12 +119,17 @@ color: white;
 </div>
     </div>
 
+   <a href="index.html">
+<img src="logo/newlogo.png" alt="Homepage" padding="1px 10px;" width="10%" height="10%" border="0">
+</a>
+
 
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
 
     <button> <a href="contactme.html"  class="button button4">Contact</a></button>
 
          <br>
+<!--This is where all of my files are for portfolio-->
 
           <div class="gallery">
   <a target="_blank" href="graphicdesign/hidalgo.isabelle.javaswamp.jpg">
@@ -164,6 +176,9 @@ color: white;
 </body>
 
 <script>
+
+    /* this is to make my news have a dropdown bar */
+
 var myIndex = 0;
 var myIndex1 = 0;
 
