--- a/index.html
+++ b/index.html
@@ -79,15 +79,12 @@ color: white;
 
 <!--This is how I do my header & buttons-->
 
-   <div class="allbuttons">
-    <button> <a href="aboutme.html" class="button button1">About Me</a></button>
+   <button> <a href="aboutme.html" class="button button1">About Me</a></button>
 
 
 <div class="dropdown">
-<button> <a href="aboutme.html" class="button button1" onmouseover="myFunction()" class="dropbtn">News</a></button>
+<button> <a href="recentnews.html" class="button button1" onmouseover="myFunction()" class="dropbtn">News</a></button>
  <div>
-
-
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
     <a href="recentnews.html">Most Recent</a>
@@ -97,13 +94,16 @@ color: white;
 </div>
     </div>
 
-    <input img="" class="myButton" type="submit" value="">
+      <a href="index.html">
+<img src="logo/newlogo.png" alt="Homepage" padding="1px 10px;" width="10%" height="10%" border="0">
+</a>
+
 
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
 
     <button> <a href="contactme.html"  class="button button4">Contact</a></button>
 
-</div>
+    </head>
 
 <!-- This is the pics for my slideshow-->
 
@@ -120,13 +120,16 @@ color: white;
 
 </div>
 
-    </body>
+    </head>
+
+
 
 
 <script>
 var myIndex = 0;
 var myIndex1 = 0;
 
+/* this is to make my slideshow */
 
 carousel();
 
@@ -139,8 +142,10 @@ function carousel() {
     myIndex++;
     if (myIndex > x.length) {myIndex = 1}
     x[myIndex-1].style.display = "block";
-    setTimeout(carousel, 2000); // Change image every 2 seconds
+    setTimeout(carousel, 4000); // Change image every 2 seconds
 }
+
+    /* this is to make my news have a dropdown bar */
 
     function myFunction() {
     document.getElementById("myDropdown").classList.toggle("show");
@@ -179,8 +184,5 @@ function filterFunction() {
     }
 }
 </script>
-
-
-    </head>
 
 </html>
