--- a/recentnews.html
+++ b/recentnews.html
@@ -85,7 +85,7 @@ color: white;
 
 
 <div class="dropdown">
-<button> <a href="aboutme.html" class="button button1" onmouseover="myFunction()" class="dropbtn">News</a></button>
+<button> <a href="recentnews.html" class="button button1" onmouseover="myFunction()" class="dropbtn">News</a></button>
  <div>
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
@@ -96,7 +96,13 @@ color: white;
 </div>
     </div>
 
+    <a href="index.html">
+<img src="logo/newlogo.png" alt="Homepage" padding="1px 10px;" width="10%" height="10%" border="0">
+</a>
+
+
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
+
 
     <button> <a href="contactme.html"  class="button button4">Contact</a></button>
 
@@ -105,4 +111,49 @@ color: white;
 
 recent news
 </body>
+
+<script>
+
+
+var myIndex = 0;
+var myIndex1 = 0;
+
+    function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+
+
+    function myFunction1() {
+    document.getElementById("myDropdown2").classList.toggle("show");
+}
+
+function filterFunction() {
+    var input, filter, ul, li, a, i;
+    input = document.getElementById("myInput");
+    filter = input.value.toUpperCase();
+    div = document.getElementById("myDropdown");
+    a = div.getElementsByTagName("a");
+    for (i = 0; i < a.length; i++) {
+        if (a[i].innerHTML.toUpperCase().indexOf(filter) > -1) {
+            a[i].style.display = "";
+        } else {
+            a[i].style.display = "none";
+        }
+    }
+}
+
+    function filterFunction1() {
+    var  input, filter, ul, li, a, i;
+    div = document.getElementById("myDropdown2");
+    a = div.getElementsByTagName("b");
+    for (i = 0; i < a.length; i++) {
+        if (a[i].innerHTML.toUpperCase().indexOf(filter) > -1) {
+            a[i].style.display = "";
+        } else {
+            a[i].style.display = "none";
+        }
+    }
+}
+</script>
+
 </html>
