--- a/aboutme.html
+++ b/aboutme.html
@@ -116,7 +116,7 @@ color: white;
 
 <!--This is how I put my resume-->
 
-<img class="resume" src="resume.png" alt="resume"/>
+<img align="center" class="resume" src="resume.png" alt="resume"/>
 
 
     </body>
