--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ color: white;
 
 <!--This is how I do my header & buttons-->
 
-   <button> <a href="aboutme.html" class="button button1">About Me</a></button>
+   <center>
+ <button> <a href="aboutme.html" class="button button1">About Me</a></button>
 
 
 <div class="dropdown">
@@ -102,12 +103,12 @@ color: white;
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
 
     <button> <a href="contactme.html"  class="button button4">Contact</a></button>
-
-    </head>
+    </center>
 
 <!-- This is the pics for my slideshow-->
 
-<div class="slideshow" style="max-width:800px">
+<center>
+ <div class="slideshow" style="max-width:800px">
   <img class="mySlides" src="newlandscape/beachreddot.png" style="width:800px">
   <img class="mySlides" src="newlandscape/beachwithdad.png" style="width:800px">
   <img class="mySlides" src="newlandscape/dorneyxc.png" style="width:800px">
@@ -118,9 +119,11 @@ color: white;
   <img class="mySlides" src="newlandscape/kayaking.png" style="width:800px">
    <img class="mySlides" src="newlandscape/laughingreddot.png" style="width:800px">
 
-</div>
-
+    </div>
+    </center>
+    </body>
     </head>
+
 
 
 
