--- a/aboutme.html
+++ b/aboutme.html
@@ -87,7 +87,7 @@ color: white;
 <body>
 
 <!--This is how I do my header & buttons-->
-
+<center>
  <button> <a href="aboutme.html" class="button button1">About Me</a></button>
 
 
@@ -111,12 +111,13 @@ color: white;
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
 
     <button> <a href="contactme.html"  class="button button4">Contact</a></button>
+    </center>
 
 <br>
 
 <!--This is how I put my resume-->
 
-<img align="center" class="resume" src="resume.png" alt="resume"/>
+<center><img align="center" class="resume" src="resume.png" alt="resume"/></center>
 
 
     </body>
