--- a/archives.html
+++ b/archives.html
@@ -86,7 +86,8 @@ color: white;
 
 <!--This is how I do my header & buttons-->
 
-     <button> <a href="aboutme.html" class="button button1">About Me</a></button>
+     <center>
+ <button> <a href="aboutme.html" class="button button1">About Me</a></button>
 
 
 <div class="dropdown">
@@ -101,7 +102,6 @@ color: white;
 </div>
     </div>
 
-
       <a href="index.html">
 <img src="logo/newlogo.png" alt="Homepage" padding="1px 10px;" width="10%" height="10%" border="0">
 </a>
@@ -110,6 +110,7 @@ color: white;
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
 
     <button> <a href="contactme.html"  class="button button4">Contact</a></button>
+    </center>
 
 <p><br></p>
 
