--- a/blog.html
+++ b/blog.html
@@ -82,7 +82,8 @@ color: white;
 </head>
 
 
-  <button> <a href="aboutme.html" class="button button1">About Me</a></button>
+  <center>
+ <button> <a href="aboutme.html" class="button button1">About Me</a></button>
 
 
 <div class="dropdown">
@@ -97,7 +98,7 @@ color: white;
 </div>
     </div>
 
-       <a href="index.html">
+      <a href="index.html">
 <img src="logo/newlogo.png" alt="Homepage" padding="1px 10px;" width="10%" height="10%" border="0">
 </a>
 
@@ -105,12 +106,13 @@ color: white;
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
 
     <button> <a href="contactme.html"  class="button button4">Contact</a></button>
+    </center>
 
     <p><br></p>
 
     <!--This is how I added my articles-->
 
-    <img class="article1" src="cursed.png" alt="resume"/>
+    <img class="article1" src="cursed.png" alt="cornfig"/>
 
     <script>
 
