--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,8 @@ color: white;
 
     <!--This is how I do my header & buttons-->
 
-    <button> <a href="aboutme.html" class="button button1">About Me</a></button>
+    <center>
+ <button> <a href="aboutme.html" class="button button1">About Me</a></button>
 
 
 <div class="dropdown">
@@ -119,7 +120,7 @@ color: white;
 </div>
     </div>
 
-   <a href="index.html">
+      <a href="index.html">
 <img src="logo/newlogo.png" alt="Homepage" padding="1px 10px;" width="10%" height="10%" border="0">
 </a>
 
@@ -173,6 +174,7 @@ color: white;
   <div class="desc">A Poem About Him.</div>
 </div>
 
+</center>
 </body>
 
 <script>
