--- a/recentnews.html
+++ b/recentnews.html
@@ -81,6 +81,7 @@ color: white;
 
 <!--This is how I do my header & buttons-->
 
+ <center>
  <button> <a href="aboutme.html" class="button button1">About Me</a></button>
 
 
@@ -96,15 +97,15 @@ color: white;
 </div>
     </div>
 
-    <a href="index.html">
+      <a href="index.html">
 <img src="logo/newlogo.png" alt="Homepage" padding="1px 10px;" width="10%" height="10%" border="0">
 </a>
 
 
     <button> <a href="portfolio.html" class="button button3">Portfolio</a></button>
 
-
     <button> <a href="contactme.html"  class="button button4">Contact</a></button>
+    </center>
 
     <br>
 
