fixed a whole bunch of jawns

--- a/blog.html
+++ b/blog.html
@@ -91,7 +91,6 @@ color: white;
  <div>
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-    <a href="recentnews.html">Most Recent</a>
     <a href="archives.html">Archives</a>
     <a href="blog.html">Blog</a>
   </div>
@@ -112,7 +111,9 @@ color: white;
 
     <!--This is how I added my articles-->
 
-    <img class="article1" src="cursed.png" alt="cornfig"/>
+   <center>
+     <img class="article1" src="cursed.png" alt="cornfig"/>
+     </center>
 
     <script>
 
