--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 
 <style>
 .mySlides {display:none;}
+
+     body {
+            background-color: rgba(179, 219, 214, 0.76);
+        }
+
 </style>
 
 <head>
     <title>My Page</title>
     <link rel="stylesheet" href="index.css">
     <head>
-<style>
 
-
+        <style>
     .button {
     background-color: DAE1F1;
     border: none;
@@ -77,6 +81,8 @@ color: white;
 
 <body>
 
+
+
 <!--This is how I do my header & buttons-->
 
    <center>
@@ -89,7 +95,6 @@ color: white;
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
     <a href="recentnews.html">Most Recent</a>
-    <a href="archives.html">Archives</a>
     <a href="blog.html">Blog</a>
   </div>
 </div>
