--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,6 @@ color: white;
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
     <a href="recentnews.html">Most Recent</a>
-    <a href="archives.html">Archives</a>
     <a href="blog.html">Blog</a>
   </div>
 </div>
@@ -132,6 +131,7 @@ color: white;
          <br>
 <!--This is where all of my files are for portfolio-->
 
+    <div id="wholegallery">
           <div class="gallery">
   <a target="_blank" href="graphicdesign/hidalgo.isabelle.javaswamp.jpg">
     <img src="graphicdesign/hidalgo.isabelle.javaswamp.jpg" alt="Java Swamp" width="600" height="400">
@@ -153,13 +153,6 @@ color: white;
   <div class="desc">A mermaid takes over nature using her magic.</div>
 </div>
 
-<div class="gallery">
-  <a target="_blank" href="writing/TwistedTaleEssay.pdf">
-    <img src="writing/twistedtalegraphic.png" alt="Snowwhite" width="600" height="400">
-  </a>
-  <div class="desc">A twist on the classic tale of Snow White.</div>
-</div>
-
  <div class="gallery">
   <a target="_blank" href="graphicdesign/hidalgo.isabelle.symbols.jpg">
     <img src="graphicdesign/hidalgo.isabelle.symbols.jpg" alt="Questions" width="600" height="400">
@@ -173,6 +166,11 @@ color: white;
   </a>
   <div class="desc">A Poem About Him.</div>
 </div>
+</div>
+
+ <!--The end of gallery-->
+
+
 
 </center>
 </body>
