--- a/recentnews.html
+++ b/recentnews.html
@@ -91,7 +91,6 @@ color: white;
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
     <a href="recentnews.html">Most Recent</a>
-    <a href="archives.html">Archives</a>
     <a href="blog.html">Blog</a>
   </div>
 </div>
@@ -109,8 +108,24 @@ color: white;
 
     <br>
 
+<center>
+  <div class="newsweb">
+<iframe src="http://the-daily.buzz/" width="688" height="500" frameborder="0" style="border:0"
+ allowfullscreen></iframe>
+    </div>
 
-recent news
+
+ <div class="newsweb"> <iframe src="http://www.theonion.com/" width="688" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
+
+<div class="newsweb">
+<iframe src="https://totallyrealnews.com/" width="688" height="500" frameborder="0" style="border:0"
+ allowfullscreen></iframe>
+    </div>
+
+
+</center>
+
 </body>
 
 <script>
